--- a/24hFarfadet/src/main/resources/templates/testihm2.html
+++ b/24hFarfadet/src/main/resources/templates/testihm2.html
@@ -46,19 +46,43 @@
         <button type="submit" class="btn btn-primary">Run</button>
       </div>
 
+    </form>
+
 
       <hr>
+      <form action = "/test-ihm2" method="post">
+        <h3>Lancer animation</h3>
+        <div class="container">
 
-      <h3>Lancer animation</h3>
-      <div class="container">
-        <button type="button" class="btn btn-primary">Animation</button>
-      </div>
+          <select name = "nom">
+            <option value="Laumio_10805F">Laumio_10805F</option>
+            <option value="Laumio_88813D">Laumio_88813D</option>
+            <option value="Laumio_104F03">Laumio_104F03</option>
+            <option value="Laumio_D454DB">Laumio_D454DB</option>
+            <option value="Laumio_CD0522">Laumio_CD0522</option>
+            <option value="Laumio_0FBFBF">Laumio_0FBFBF</option>
+            <option value="Laumio_0FC168">Laumio_0FC168</option>
+            <option value="Laumio_104A13">Laumio_104A13</option>
+            <option value="Laumio_107DA8">Laumio_107DA8</option>
+            <option value="Laumio_10508F">Laumio_10508F</option>
+            <option value="Laumio_1D9486">Laumio_1D9486</option>
+            <option value="Laumio_439BA9">Laumio_439BA9</option>
+          </select>
+
+
+        </div>
+        <div class="container">
+          <button type="submit" class="btn btn-primary">Animation</button>
+        </div>
+
+      </form>
+
 
       <hr>
       <h3>Capteur distance</h3>
       <div class="container">
-        <button type="button" class="btn btn-primary">Status</button>
-        <button type="button" class="btn btn-primary">Value</button>
+        <output type="text" class="btn btn-primary">Status</output>
+        <output type="text" class="btn btn-primary">Value</output>
       </div>
 
       <hr>
@@ -67,7 +91,7 @@
         <button type="button" class="btn btn-primary">Status</button>
         <button type="button" class="btn btn-primary">Value</button>
       </div>
-    </form>
+
 
 
 
