--- a/24hFarfadet/src/main/resources/templates/testihmBeau.html
+++ b/24hFarfadet/src/main/resources/templates/testihmBeau.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Bootstrap Example</title>
+        <title>Les Farfadets Pimpants</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -20,24 +20,25 @@
 
             <fieldset class="fieldset1">
                 <legend class="scheduler-border">Allumer une lampe</legend>
-                <div class="container input-group-prepend double">
-                    <div class="input-group-append">
-                        <span class="input-group-text" id="entete">Choisir sa lampe</span>
+                <div class="container double">
+
+                    <div class="container double">
+                        <select name = "nom" class="custom-select mb-8 col-sm-10" id="champ">
+                            <option value="Laumio_10805F">Laumio_10805F</option>
+                            <option value="Laumio_88813D">Laumio_88813D</option>
+                            <option value="Laumio_104F03">Laumio_104F03</option>
+                            <option value="Laumio_D454DB">Laumio_D454DB</option>
+                            <option value="Laumio_CD0522">Laumio_CD0522</option>
+                            <option value="Laumio_0FBFBF">Laumio_0FBFBF</option>
+                            <option value="Laumio_0FC168">Laumio_0FC168</option>
+                            <option value="Laumio_104A13">Laumio_104A13</option>
+                            <option value="Laumio_107DA8">Laumio_107DA8</option>
+                            <option value="Laumio_10508F">Laumio_10508F</option>
+                            <option value="Laumio_1D9486">Laumio_1D9486</option>
+                            <option value="Laumio_439BA9">Laumio_439BA9</option>
+                        </select>
                     </div>
-                    <select name = "nom" class="custom-select mb-8" id="champ">
-                        <option value="Laumio_10805F">Laumio_10805F</option>
-                        <option value="Laumio_88813D">Laumio_88813D</option>
-                        <option value="Laumio_104F03">Laumio_104F03</option>
-                        <option value="Laumio_D454DB">Laumio_D454DB</option>
-                        <option value="Laumio_CD0522">Laumio_CD0522</option>
-                        <option value="Laumio_0FBFBF">Laumio_0FBFBF</option>
-                        <option value="Laumio_0FC168">Laumio_0FC168</option>
-                        <option value="Laumio_104A13">Laumio_104A13</option>
-                        <option value="Laumio_107DA8">Laumio_107DA8</option>
-                        <option value="Laumio_10508F">Laumio_10508F</option>
-                        <option value="Laumio_1D9486">Laumio_1D9486</option>
-                        <option value="Laumio_439BA9">Laumio_439BA9</option>
-                    </select>
+
 
 
                 </div>
@@ -60,6 +61,15 @@
 
 <fieldset class="fieldset1">
     <legend>Lancer une animation</legend>
+
+    <div class="container double">
+        <select name="anime" class="custom-select mb-3 col-sm-10">
+            <option selected>Choisir l'animation</option>
+            <option value="france">Animation 1 - France</option>
+            <option value="communisme">Animation 2 - Communisme</option>
+            <option value="animation3">Animation 3 - </option>
+        </select>
+    </div>
     <div class="container double">
         <button type="button" class="btn btn-primary col-sm-10">Animation</button>
     </div>
@@ -69,6 +79,9 @@
 <fieldset class="fieldset1">
     <legend>Capteur de distance</legend>
     <div class="container double">
+        <div class="form-group double ">
+                    <label style="color: red;" class="col-sm-10"><input type="text" class="form-control" value="Valeur du capteur de distance" name="distance" disabled></input></label>
+                </div>
         <button type="button" class="btn btn-primary col-sm-5">Statut</button>
         <button type="button" class="btn btn-primary col-sm-5">Valeur</button>
     </div>
@@ -76,10 +89,12 @@
 </fieldset>
 
 
-<hr>
 <fieldset class="fieldset1">
     <legend>Capteur de température</legend>
     <div class="container double">
+        <div class="form-group double ">
+                    <label style="color: red;" class="col-sm-10"><input type="text" class="form-control" value="Valeur du capteur de température" name="temperature" disabled></input></label>
+                </div>
         <button type="button" class="btn btn-primary col-sm-5">Statut</button>
         <button type="button" class="btn btn-primary col-sm-5">Valeur</button>
     </div>
