--- a/24hFarfadet/src/main/resources/templates/testihmBeau.html
+++ b/24hFarfadet/src/main/resources/templates/testihmBeau.html
@@ -55,11 +55,11 @@
 <div class="container double">
     <button type="submit" class="btn btn-primary col-sm-10">Appliquer</button>
 </div>
+
 </fieldset>
-
-
-
-<fieldset class="fieldset1">
+        </form>
+<form action = "/testihmBeau2" method="post">
+    <fieldset class="fieldset1">
     <legend>Lancer une animation</legend>
 
     <div class="container double">
@@ -67,14 +67,17 @@
             <option selected>Choisir l'animation</option>
             <option value="france">Animation 1 - France</option>
             <option value="communisme">Animation 2 - Communisme</option>
-            <option value="animation3">Animation 3 - </option>
+
         </select>
     </div>
     <div class="container double">
-        <button type="button" class="btn btn-primary col-sm-10">Animation</button>
+        <button type="submit" class="btn btn-primary col-sm-10">Animation</button>
     </div>
 
-</fieldset>    
+</fieldset>
+</form>
+
+
 
 <fieldset class="fieldset1">
     <legend>Capteur de distance</legend>
@@ -102,7 +105,7 @@
 
 
 
-</form>
+
 
 <div class="jumbotron text-center">
     <p> © Les Farfadets Pimpants</p> 
